--- a/assets/styles/components/_base.scss
+++ b/assets/styles/components/_base.scss
@@ -16,8 +16,28 @@ ul{
     list-style: none;
 }
 
+input{
+    &:focus,
+    &:hover{
+        box-shadow: none !important;
+        outline: none !important;
+    }
+}
+
 a{
     text-decoration: none;
+}
+
+*::-webkit-scrollbar{
+    width: .3rem;
+}
+
+*::-webkit-scrollbar-track{
+    background-color: transparent;
+}
+
+*::-webkit-scrollbar-thumb{
+    background-color: $gray-dark-6;
 }
 
 ::selection{
@@ -35,6 +55,19 @@ i[class^="fi-rr-"]:before, i[class*=" fi-rr-"]:before, span[class^="fi-rr-"]:bef
     width: 50% !important;
     transition: .4s all ease-in-out;
     padding: 40px;
+    border-color: $gray-light-6 !important;
+}
+
+.btn-close{
+    background-image: none;
+    font-size: 25px;
+
+    &:focus,
+    &:hover{
+        box-shadow: none;
+        border: none;
+        outline: none;
+    }
 }
 
 @media screen and (max-width: 1152px){
