--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -199,6 +199,47 @@
   transform: rotate(180deg);
 }
 
+.devices .devices__title {
+  font-weight: 600;
+}
+.devices .device__box {
+  max-width: 140px;
+  max-height: 140px;
+  min-width: 140px;
+  min-height: 140px;
+  border: 1px solid rgb(242, 242, 247);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 5px;
+  border-radius: 15px;
+  margin: 0 0.5rem;
+  transition: background-color 0.3s ease;
+}
+.devices .device__box:first-child {
+  margin-left: 0;
+}
+.devices .device__box .title {
+  padding: 5px 0;
+  margin: 0;
+  color: rgb(17, 17, 17);
+  font-weight: 600;
+}
+.devices .device__box img {
+  width: auto;
+  max-height: 40px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.devices .device__box .badge {
+  background-color: rgb(10, 132, 255);
+  font-size: 10px;
+}
+.devices .device__box:hover {
+  background-color: rgb(242, 242, 247);
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -217,8 +258,25 @@ ul {
   list-style: none;
 }
 
+input:focus, input:hover {
+  box-shadow: none !important;
+  outline: none !important;
+}
+
 a {
   text-decoration: none;
+}
+
+*::-webkit-scrollbar {
+  width: 0.3rem;
+}
+
+*::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: rgb(28, 28, 30);
 }
 
 ::-moz-selection {
@@ -240,6 +298,17 @@ i[class^=fi-rr-]:before, i[class*=" fi-rr-"]:before, span[class^=fi-rr-]:before,
   width: 50% !important;
   transition: 0.4s all ease-in-out;
   padding: 40px;
+  border-color: rgb(242, 242, 247) !important;
+}
+
+.btn-close {
+  background-image: none;
+  font-size: 25px;
+}
+.btn-close:focus, .btn-close:hover {
+  box-shadow: none;
+  border: none;
+  outline: none;
 }
 
 @media screen and (max-width: 1152px) {
