--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -62,7 +62,7 @@
   -moz-column-gap: 0.25rem;
        column-gap: 0.25rem;
   color: rgb(17, 17, 17);
-  font-weight: 600;
+  font-weight: 700;
   transition: color 0.3s;
 }
 .nav__logo i {
@@ -112,7 +112,7 @@
 }
 .nav__link {
   color: rgb(17, 17, 17);
-  font-weight: 600;
+  font-weight: 700;
   padding: 1.25rem 1.5rem;
   display: flex;
   justify-content: space-between;
@@ -178,7 +178,7 @@
 }
 .dropdown__title {
   font-size: var(--small-font-size);
-  font-weight: 600;
+  font-weight: 700;
   color: rgb(17, 17, 17);
 }
 .dropdown__list {
@@ -199,10 +199,26 @@
   transform: rotate(180deg);
 }
 
-.devices .devices__title {
-  font-weight: 600;
+.search__offcanvas input[type=search] {
+  border-radius: 10px;
 }
-.devices .device__box {
+.search__offcanvas input[type=search]:focus {
+  border-color: rgb(10, 132, 255);
+}
+.search__offcanvas .devices {
+  display: flex;
+  gap: 1rem;
+  flex-direction: column;
+}
+.search__offcanvas .devices .device__container {
+  overflow-x: auto;
+  gap: 1rem;
+}
+.search__offcanvas .devices .devices__title {
+  font-weight: 700;
+  font-size: 0.813rem;
+}
+.search__offcanvas .devices .device__box {
   max-width: 140px;
   max-height: 140px;
   min-width: 140px;
@@ -214,29 +230,49 @@
   flex-direction: column;
   padding: 5px;
   border-radius: 15px;
-  margin: 0 0.5rem;
   transition: background-color 0.3s ease;
 }
-.devices .device__box:first-child {
+.search__offcanvas .devices .device__box:first-child {
   margin-left: 0;
 }
-.devices .device__box .title {
+.search__offcanvas .devices .device__box .title {
   padding: 5px 0;
   margin: 0;
   color: rgb(17, 17, 17);
   font-weight: 600;
 }
-.devices .device__box img {
+.search__offcanvas .devices .device__box img {
   width: auto;
   max-height: 40px;
   -o-object-fit: cover;
      object-fit: cover;
 }
-.devices .device__box .badge {
+.search__offcanvas .devices .device__box .badge {
   background-color: rgb(10, 132, 255);
   font-size: 10px;
 }
-.devices .device__box:hover {
+.search__offcanvas .devices .device__box:hover {
+  background-color: rgb(242, 242, 247);
+}
+.search__offcanvas .popular__search .title {
+  font-weight: 700;
+  font-size: 0.813rem;
+}
+.search__offcanvas .popular__search .list-group-item {
+  background-color: rgb(255, 255, 255);
+  border: none;
+  border-radius: 10px;
+  padding: 10px 25px;
+  transition: background-color 0.3s ease;
+  display: flex;
+  flex-direction: column;
+  font-weight: 600;
+}
+.search__offcanvas .popular__search .list-group-item span {
+  font-size: 0.75rem;
+  color: rgb(99, 99, 102);
+}
+.search__offcanvas .popular__search .list-group-item:hover {
   background-color: rgb(242, 242, 247);
 }
 
@@ -311,13 +347,6 @@ i[class^=fi-rr-]:before, i[class*=" fi-rr-"]:before, span[class^=fi-rr-]:before,
   outline: none;
 }
 
-@media screen and (max-width: 1152px) {
-  .offcanvas {
-    width: 90% !important;
-    transition: 0.4s all ease-in-out;
-    padding: 5px;
-  }
-}
 /*=============== BREAKPOINTS ===============*/
 /* For small devices */
 @media screen and (max-width: 300px) {
@@ -431,5 +460,10 @@ i[class^=fi-rr-]:before, i[class*=" fi-rr-"]:before, span[class^=fi-rr-]:before,
   .nav {
     justify-content: end;
     padding: 0;
+  }
+  .offcanvas {
+    width: 90% !important;
+    transition: 0.4s all ease-in-out;
+    padding: 5px;
   }
 }/*# sourceMappingURL=style.css.map */
