--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,469 +1,1 @@
-/*=============== HEADER ===============*/
-.header {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  background-color: var(--body-color);
-  z-index: var(--z-fixed);
-  border-bottom: 1px solid rgb(242, 242, 247);
-  display: grid;
-}
-.header .buttons__group {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.header .buttons__group .button__item {
-  margin: 0 10px;
-  border: none;
-  font-size: calc(0.938rem + 1px);
-  transition: color 0.3s;
-}
-.header .buttons__group .button__item:hover {
-  color: rgb(0, 122, 255);
-}
-.header .top-header {
-  width: 100%;
-  height: 32px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: rgb(58, 58, 60);
-  color: rgb(255, 255, 255);
-}
-.header .top-header .container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.header .top-header .container p {
-  padding: 0 15px;
-  margin: 0;
-  font-size: 0.75rem;
-}
-.header .top-header.hidden {
-  display: none;
-}
-
-/*=============== NAV ===============*/
-.nav {
-  height: 3.5rem;
-}
-.nav__data {
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.nav__logo {
-  display: inline-flex;
-  align-items: center;
-  -moz-column-gap: 0.25rem;
-       column-gap: 0.25rem;
-  color: rgb(17, 17, 17);
-  font-weight: 700;
-  transition: color 0.3s;
-}
-.nav__logo i {
-  font-size: 1.25rem;
-}
-.nav__logo:hover {
-  color: var(--first-color);
-}
-.nav__toggle {
-  position: relative;
-  width: 32px;
-  height: 32px;
-}
-.nav__toggle-menu, .nav__toggle-close {
-  font-size: 1.25rem;
-  color: rgb(17, 17, 17);
-  position: absolute;
-  display: grid;
-  place-items: center;
-  inset: 0;
-  cursor: pointer;
-  transition: opacity 0.1s, transform 0.4s;
-}
-.nav__toggle-close {
-  opacity: 0;
-}
-@media screen and (max-width: 1118px) {
-  .nav__menu {
-    background-color: var(--body-color);
-    position: absolute;
-    left: 0;
-    top: 2.5rem;
-    width: 100%;
-    height: calc(100vh - 3.5rem);
-    overflow: auto;
-    padding-block: 1.5rem 4rem;
-    pointer-events: none;
-    opacity: 0;
-    transition: top 0.4s, opacity 0.3s;
-  }
-  .nav__menu::-webkit-scrollbar {
-    width: 0.5rem;
-  }
-  .nav__menu::-webkit-scrollbar-thumb {
-    background-color: hsl(220, 12%, 70%);
-  }
-}
-.nav__link {
-  color: rgb(17, 17, 17);
-  font-weight: 700;
-  padding: 1.25rem 1.5rem;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  transition: background-color 0.3s;
-}
-.nav__link:hover {
-  background-color: var(--first-color-lighten);
-}
-
-/* Show menu */
-.show-menu {
-  opacity: 1;
-  top: 3.5rem;
-  pointer-events: initial;
-}
-
-/* Show icon */
-.show-icon .nav__toggle-menu {
-  opacity: 0;
-  transform: rotate(90deg);
-}
-
-.show-icon .nav__toggle-close {
-  opacity: 1;
-  transform: rotate(90deg);
-}
-
-/*=============== DROPDOWN ===============*/
-.dropdown__button {
-  cursor: pointer;
-}
-.dropdown__arrow {
-  font-size: 0.813rem;
-  font-weight: initial;
-  transition: transform 0.4s;
-}
-.dropdown__content, .dropdown__group, .dropdown__list {
-  display: grid;
-}
-.dropdown__container {
-  background-color: var(--first-color-lighten);
-  height: 0;
-  overflow: hidden;
-  transition: height 0.4s;
-}
-.dropdown__content {
-  row-gap: 1.75rem;
-}
-.dropdown__group {
-  padding-left: 2.5rem;
-  row-gap: 0.5rem;
-}
-.dropdown__group:first-child {
-  margin-top: 1.25rem;
-}
-.dropdown__group:last-child {
-  margin-bottom: 1.25rem;
-}
-.dropdown__icon i {
-  font-size: 1.25rem;
-  color: var(--first-color);
-}
-.dropdown__title {
-  font-size: var(--small-font-size);
-  font-weight: 700;
-  color: rgb(17, 17, 17);
-}
-.dropdown__list {
-  row-gap: 0.25rem;
-}
-.dropdown__link {
-  font-size: var(--smaller-font-size);
-  font-weight: var(--font-medium);
-  color: var(--text-color);
-  transition: color 0.3s;
-}
-.dropdown__link:hover {
-  color: rgb(17, 17, 17);
-}
-
-/* Rotate dropdown icon */
-.show-dropdown .dropdown__arrow {
-  transform: rotate(180deg);
-}
-
-.search__offcanvas input[type=search] {
-  border-radius: 10px;
-}
-.search__offcanvas input[type=search]:focus {
-  border-color: rgb(10, 132, 255);
-}
-.search__offcanvas .devices {
-  display: flex;
-  gap: 1rem;
-  flex-direction: column;
-}
-.search__offcanvas .devices .device__container {
-  overflow-x: auto;
-  gap: 1rem;
-}
-.search__offcanvas .devices .devices__title {
-  font-weight: 700;
-  font-size: 0.813rem;
-}
-.search__offcanvas .devices .device__box {
-  max-width: 140px;
-  max-height: 140px;
-  min-width: 140px;
-  min-height: 140px;
-  border: 1px solid rgb(242, 242, 247);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  padding: 5px;
-  border-radius: 15px;
-  transition: background-color 0.3s ease;
-}
-.search__offcanvas .devices .device__box:first-child {
-  margin-left: 0;
-}
-.search__offcanvas .devices .device__box .title {
-  padding: 5px 0;
-  margin: 0;
-  color: rgb(17, 17, 17);
-  font-weight: 600;
-}
-.search__offcanvas .devices .device__box img {
-  width: auto;
-  max-height: 40px;
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-.search__offcanvas .devices .device__box .badge {
-  background-color: rgb(10, 132, 255);
-  font-size: 10px;
-}
-.search__offcanvas .devices .device__box:hover {
-  background-color: rgb(242, 242, 247);
-}
-.search__offcanvas .popular__search .title {
-  font-weight: 700;
-  font-size: 0.813rem;
-}
-.search__offcanvas .popular__search .list-group-item {
-  background-color: rgb(255, 255, 255);
-  border: none;
-  border-radius: 10px;
-  padding: 10px 25px;
-  transition: background-color 0.3s ease;
-  display: flex;
-  flex-direction: column;
-  font-weight: 600;
-}
-.search__offcanvas .popular__search .list-group-item span {
-  font-size: 0.75rem;
-  color: rgb(99, 99, 102);
-}
-.search__offcanvas .popular__search .list-group-item:hover {
-  background-color: rgb(242, 242, 247);
-}
-
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  scroll-behavior: smooth;
-}
-
-body {
-  font-size: 0.938rem;
-  background-color: rgb(255, 255, 255);
-  color: rgb(17, 17, 17);
-  height: 3000px;
-}
-
-ul {
-  list-style: none;
-}
-
-input:focus, input:hover {
-  box-shadow: none !important;
-  outline: none !important;
-}
-
-a {
-  text-decoration: none;
-}
-
-*::-webkit-scrollbar {
-  width: 0.3rem;
-}
-
-*::-webkit-scrollbar-track {
-  background-color: transparent;
-}
-
-*::-webkit-scrollbar-thumb {
-  background-color: rgb(28, 28, 30);
-}
-
-::-moz-selection {
-  background-color: rgb(17, 17, 17);
-}
-
-::selection {
-  background-color: rgb(17, 17, 17);
-}
-
-i[class^=fi-rr-]:before, i[class*=" fi-rr-"]:before, span[class^=fi-rr-]:before, span[class*=fi-rr-]:before {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  line-height: 0;
-}
-
-.offcanvas {
-  width: 50% !important;
-  transition: 0.4s all ease-in-out;
-  padding: 40px;
-  border-color: rgb(242, 242, 247) !important;
-}
-
-.btn-close {
-  background-image: none;
-  font-size: 25px;
-}
-.btn-close:focus, .btn-close:hover {
-  box-shadow: none;
-  border: none;
-  outline: none;
-}
-
-/*=============== BREAKPOINTS ===============*/
-/* For small devices */
-@media screen and (max-width: 300px) {
-  .dropdown__group {
-    padding-left: 1.5rem;
-  }
-}
-/* For large devices */
-@media screen and (min-width: 1118px) {
-  /* Nav */
-  .nav {
-    height: 4.5rem;
-    display: flex;
-    justify-content: center;
-  }
-  .nav__toggle {
-    display: none;
-  }
-  .nav__list {
-    display: flex;
-    -moz-column-gap: 3rem;
-         column-gap: 3rem;
-    height: 100%;
-  }
-  .nav li {
-    display: flex;
-  }
-  .nav__link {
-    padding: 0;
-  }
-  .nav__link:hover {
-    background-color: initial;
-  }
-  /* Dropdown */
-  .dropdown__button {
-    -moz-column-gap: 0.25rem;
-         column-gap: 0.25rem;
-    pointer-events: none;
-  }
-  .dropdown__container {
-    height: -moz-max-content;
-    height: max-content;
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 5.5rem;
-    background-color: var(--body-color);
-    border-bottom: 1px solid rgb(242, 242, 247);
-    pointer-events: none;
-    opacity: 0;
-    transition: top 0.4s, opacity 0.3s;
-  }
-  .dropdown__content {
-    grid-template-columns: repeat(4, max-content);
-    -moz-column-gap: 6rem;
-         column-gap: 6rem;
-    max-width: 1120px;
-    margin-inline: auto;
-  }
-  .dropdown__group {
-    padding: 4rem 0;
-    align-content: baseline;
-    row-gap: 1.25rem;
-  }
-  .dropdown__group:first-child, .dropdown__group:last-child {
-    margin: 0;
-  }
-  .dropdown__list {
-    row-gap: 0.75rem;
-  }
-  .dropdown__icon {
-    width: 60px;
-    height: 60px;
-    background-color: var(--first-color-lighten);
-    border-radius: 50%;
-    display: grid;
-    place-items: center;
-    margin-bottom: 1rem;
-  }
-  .dropdown__icon i {
-    font-size: 2rem;
-  }
-  .dropdown__title {
-    font-size: var(--normal-font-size);
-  }
-  .dropdown__link {
-    font-size: var(--small-font-size);
-  }
-  .dropdown__link:hover {
-    color: var(--first-color);
-  }
-  .dropdown__item {
-    cursor: pointer;
-  }
-  .dropdown__item:hover .dropdown__arrow {
-    transform: rotate(180deg);
-  }
-  .dropdown__item:hover > .dropdown__container {
-    top: calc(4.5rem + 32px);
-    opacity: 1;
-    pointer-events: initial;
-    cursor: initial;
-  }
-}
-@media screen and (min-width: 1152px) {
-  .container {
-    margin-inline: auto;
-  }
-}
-@media screen and (max-width: 1152px) {
-  .nav {
-    justify-content: end;
-    padding: 0;
-  }
-  .offcanvas {
-    width: 90% !important;
-    transition: 0.4s all ease-in-out;
-    padding: 5px;
-  }
-}/*# sourceMappingURL=style.css.map */
+/*# sourceMappingURL=style.css.map */
